--- a/aulaAspNet-master/WebApplication4/Pages/Usuarios/Cadastrar.cshtml
+++ b/aulaAspNet-master/WebApplication4/Pages/Usuarios/Cadastrar.cshtml
@@ -8,10 +8,8 @@
 
 <script charset="utf-8" type="text/javascript">
     function checkPassword() {
-        var pass = document.getElementById(1);
-        console.log(pass.value);
-        var confirmacao = document.getElementById(2);
-        console.log(confirmacao.value);
+        var pass = document.getElementById("senha");
+        var confirmacao = document.getElementById("confirmsenha");
 
         if (pass.value != confirmacao.value) {
             window.alert("Senha e confirmação não batem")
@@ -24,13 +22,13 @@
 
 </script>
 
-<form>
+<form onsubmit="checkPassword()">
     <div class="form-group">
         <label for="usuario.Nome">Nome</label>
         <input type="text" name="usuario.Nome" value="@Model.usuario.Nome" class="form-control" placeholder="Nome" />
 
         <label for="usuario.Email">Email</label>
-        <input type="text" name="usuario.Email" value="@Model.usuario.Email" class="form-control" placeholder="Email" />
+        <input type="Email" name="usuario.Email" value="@Model.usuario.Email" class="form-control" placeholder="Email" />
 
         <label for="usuario.Cpf">CPF</label>
         <input type="text" name="usuario.Cpf" value="@Model.usuario.Cpf" class="form-control" placeholder="CPF" />
@@ -39,10 +37,10 @@
         <input type="date" name="usuario.DataNascimento" value="@Model.usuario.DataNascimento" class="form-control" placeholder="dd/mm/aaaa" />
 
         <label for="usuario.Senha">Senha</label>
-        <input id ="1"type="password" name="usuario.Senha" class="form-control" placeholder="Senha" />
+        <input id ="senha"type="password" name="usuario.Senha" class="form-control" placeholder="Senha" />
 
         <label for="confirmacaoSenha">Confirmacao de Senha</label>
-        <input id ="2" type="password" name="confirmacaoSenha" class="form-control" placeholder="Confirmacao de Senha" onchange="checkPassword()"/>
+        <input id ="confirmsenha" type="password" name="confirmacaoSenha" class="form-control" placeholder="Confirmacao de Senha" onchange="checkPassword()"/>
 
         <br>
         <button class="btn btn-primary">Enviar</button>
