--- a/aulaAspNet-master/WebApplication4/Pages/Usuarios/Cadastrar.cshtml
+++ b/aulaAspNet-master/WebApplication4/Pages/Usuarios/Cadastrar.cshtml
@@ -34,7 +34,7 @@
         <input type="text" name="usuario.Cpf" value="@Model.usuario.Cpf" class="form-control" placeholder="CPF" />
 
         <label for="usuario.DataNascimento">Data de nascimento</label>
-        <input type="date" name="usuario.DataNascimento" value="@Model.usuario.DataNascimento" class="form-control" placeholder="dd/mm/aaaa" />
+        <input type="text" name="usuario.DataNascimento" value="@Model.usuario.DataNascimento" class="form-control" placeholder="dd/mm/aaaa" />
 
         <label for="usuario.Senha">Senha</label>
         <input id ="senha"type="password" name="usuario.Senha" class="form-control" placeholder="Senha" />
